--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,21 @@
       name="keywords"
       content="sweat wallet, winners, rewards, prizes, sweat"
     />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-C19GCW3KDR"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-C19GCW3KDR');
+    </script>
+
     <title>Sweat Wallet Rewards</title>
   </head>
   <body>
