--- a/client/index.html
+++ b/client/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Discover if you're one of the lucky winners! Enter your Sweat Wallet Address and see if you've won any of the prize draws from Sweat Economy."
+      content="Discover if you are one of the lucky winners! Enter your Sweat Wallet Address and see if you have won any of the prize draws from Sweat Economy."
     />
     <meta
       name="keywords"
-      content="sweat wallet, winners, rewards, prizes, sweat"
+      content="sweat wallet, winners, rewards, prizes, sweat, wallet winners"
     />
     <!-- Google tag (gtag.js) -->
     <script
