--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
     />
     <meta
       name="keywords"
-      content="sweat wallet, winners, rewards, prizes, sweat, wallet winners"
+      content="sweat wallet, winners, rewards, prizes, sweat, wallet winners, sweat wallet rewards"
     />
     <!-- Google tag (gtag.js) -->
     <script
